--- a/style.css
+++ b/style.css
@@ -258,7 +258,6 @@ main {
 
 @media (max-width: 1180px) {
   main {
-    display: grid;
     grid-template-rows: 32.4rem 24.7rem 49.682rem 24.6rem 13.1rem 35.45rem;
     grid-template-columns: repeat(2, 1fr);
     gap: 3.2rem;
@@ -405,5 +404,167 @@ main {
   }
 }
 
-@media (max-width: 621px) {
+@media (max-width: 620px) {
+  body {
+    padding: 3.2rem 1.6rem;
+  }
+
+  main {
+    grid-template-rows: 29rem 16.254rem 21.625rem 46.891rem 37.222rem 21.558rem 23.435rem 35.05rem;
+    grid-template-columns: 1fr;
+    max-width: 34.3rem;
+  }
+
+  .card--1 {
+    grid-row: 1/2;
+    grid-column: 1/2;
+    align-items: center;
+  }
+
+  .card--1 h1 {
+    font-size: 4.6rem;
+    line-height: 4.2rem;
+    letter-spacing: -4%;
+    max-width: 27.9rem;
+  }
+
+  .card--2 {
+    grid-row: 2/3;
+    grid-column: 1/2;
+  }
+
+  .card--2 h2 {
+    font-size: 2.8rem;
+    font-weight: 500;
+    line-height: 2.6rem;
+    letter-spacing: -6%;
+    max-width: unset;
+  }
+
+  .card--3 {
+    grid-row: 3/4;
+    grid-column: 1/2;
+  }
+
+  .card--3 h2 {
+    font-size: 2.6rem;
+    line-height: 2.4rem;
+    letter-spacing: -6%;
+    max-width: unset;
+  }
+
+  .card--4 {
+    grid-row: 4/5;
+    grid-column: 1/2;
+    padding: 1.747rem;
+  }
+
+  .card--4 h2 {
+    font-size: 2.6rem;
+    font-weight: 500;
+    line-height: 2.4rem;
+    letter-spacing: -6%;
+  }
+
+  .card--4 img {
+    width: 100%;
+  }
+
+  .card--5 {
+    grid-row: 5/6;
+    grid-column: 1/2;
+    flex-direction: column-reverse;
+    align-items: center;
+    text-align: center;
+    gap: 4rem;
+  }
+
+  .card--5 h2 {
+    font-size: 3.2rem;
+    line-height: 2.8rem;
+    letter-spacing: -6%;
+    max-width: 25.7rem;
+  }
+
+  .card--6 {
+    grid-row: 6/7;
+    grid-column: 1/2;
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  .card--6 h2 {
+    font-size: 4.6rem;
+    line-height: 4.2rem;
+    letter-spacing: -4%;
+  }
+
+  .card--6 p {
+    margin-bottom: 2.4rem;
+    grid-column: 1/2;
+  }
+
+  .card--6 figure {
+    grid-row: 3/4;
+    grid-column: 1/2;
+    justify-content: start;
+  }
+
+  .card--7 {
+    grid-row: 7/8;
+    grid-column: 1/2;
+  }
+
+  .card--7 h2 {
+    font-size: 3.2rem;
+    line-height: 2.8rem;
+    letter-spacing: -6%;
+  }
+
+  .card--8 {
+    grid-row: 8/9;
+    grid-column: 1/2;
+  }
+
+  .card--8 h2 {
+    font-size: 3.2rem;
+    line-height: 2.8rem;
+    letter-spacing: -6%;
+  }
+}
+
+@media (max-width: 376px) {
+  html {
+    font-size: 55%;
+  }
+}
+
+@media (max-width: 336px) {
+  html {
+    font-size: 45%;
+  }
+}
+
+@media (max-width: 274px) {
+  html {
+    font-size: 35%;
+  }
+}
+
+@media (max-width: 213px) {
+  html {
+    font-size: 25%;
+  }
+}
+
+@media (max-width: 150px) {
+  html {
+    font-size: 15%;
+  }
+}
+
+@media (max-width: 92px) {
+  html {
+    font-size: 5%;
+  }
 }
