Fix padding body

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 4rem;
+  padding: 8.3rem 4rem;
   min-height: 100dvh;
 }
 
